--- a/e-commerce-site/package.json
+++ b/e-commerce-site/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.2",
     "@tailwindcss/vite": "^4.1.16",
+    "axios": "^1.13.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
     "react-router": "^7.9.5",
+    "redux-persist": "^6.0.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^4.1.16"
   },
