--- a/services/products-service/package.json
+++ b/services/products-service/package.json
@@ -5,10 +5,10 @@
   "license": "ISC",
   "author": "",
   "type": "commonjs",
-  "main": "index.js",
+  "main": "product_service.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon product_service.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
